cli/tests/snapshot/snapshots/snapshot__error_stderr_destructuring_closed_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a value: extra field `b`
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ Dyn
  │ --- expected type
  │
  ┌─ [INPUTS_PATH]/errors/destructuring_closed_fail.ncl:3:11
  │
3 │ let {a} = {a=1, b=2}
  │           ^^^^^^^^^^ applied to this expression
  │
  ┌─ <unknown> (generated by evaluation):1:1
  │
1 │ { ... }
  │ ------- evaluated to this value
  │
  = Have you misspelled a field?
  = The record contract might also be too strict. By default, record contracts exclude any field which is not listed.
    Append `, ..` at the end of the record contract, as in `{some_field | SomeContract, ..}`, to make it accept extra fields.


